# Django-and-GraphQL

./: json_authentication.md
spaced_repetition_learning/: pyproject.toml
spaced_repetition_learning/apps/users/: admin.py
spaced_repetition_learning/config/: asgi.py  settings.py  urls.py  wsgi.py
