[tool.poetry]
name = "spaced_repetition_learning"
version = "0.1.0"
description = ""
authors = ["saikrishnavadali <saikrishna.vadali@lokibots.com>"]
license = "VSK"

[tool.poetry.dependencies]
python = "^3.8"
psycopg2 = "^2.8.6"
Django = "^3.1.5"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
